#1.3 create main.js and added switch screens

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <div id="main" class="central__content">
     <div id="intro" class="intro">
       <h1 class="intro__asterisk">*</h1>
-      <p class="intro__motto"><sup>*</sup> Это не фото. Это рисунок маслом нидерландского художника-фотореалиста Tjalf Sparnaay.</p>
+      <p class="intro__motto"><sup>*</sup> Это не фото. Это рисунок маслом нидерландского художника-фотореалиста Tjalf
+        Sparnaay.</p>
     </div>
   </div>
   <footer class="footer">
@@ -87,7 +88,8 @@
       <a href="https://www.facebook.com/htmlacademy" class="social-link  social-link--fb">Фэйсбук</a>
       <a href="https://vk.com/htmlacademy" class="social-link  social-link--vk">Вконтакте</a>
     </div>
-  </footer></template>
+  </footer>
+</template>
 
 <template id="game-1">
   <header class="header">
@@ -389,6 +391,8 @@
     </div>
   </footer>
 </template>
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
